# amra

./: .gitignore  README.md  pyproject.toml  research_lab.yaml  run.py
.engineering/: roadmap.yaml  spec_tasks.yaml
amra/: __init__.py
amra_library/: README.md  build_report.json  registry.json
ara_library/: README.md  build_report.json  registry.json
ara_math/: __init__.py  __main__.py
data/: bank_registry.yaml  problem_bank.yaml
docs/: amra_canonical_migration_spec.zh.md  amra_engineering_harness_development_plan.zh.md  amra_implementation_status.zh.md  amra_legacy_module_disposition.zh.md  amra_library_curator.md  amra_nl_lean_faithfulness.md  amra_proof_stability_benchmark.md  amra_research_capabilities_spec.zh.md  portfolio_campaign_spec.md  portfolio_campaign_spec.zh.md  repository_relationships_architecture.zh.md  spec_update_log.jsonl
scripts/: aggregate_open_fine_screen.py  imo_proofbench_campaign.py  import_research_open_benchmarks.py  import_research_open_sources.py  launch_lean_loop_8_20260527_5h.py  launch_lean_queue_3_20260527.py  launch_nl_continue_5_20260527.py  launch_open_nl_attack_10_20260526.py  screen_lean_suitable_problems.py  screen_open_research_problems.py  search_antihydra_certificate.py  setup_conjecture315_paper_project_20260527.py  shortlist_first_batch_targets.py  shortlist_research_open_candidates.py
tests/: conftest.py  test_agent_tools.py  test_amra_agent_tools.py  test_amra_algorithm_benchmark.py  test_amra_canonical_cli.py  test_amra_crypto_security.py  test_amra_discovery.py  test_amra_domain_executors.py  test_cli_flow.py  (+64 more)
(+358 files in other folders)
