[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amra"
version = "0.2.0"
description = "Automated Mathematical Research Agents with Lean formalization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
amra = "amra.cli:main"
ara-math = "ara_math.cli:main"
ara_math = "ara_math.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ara_math = ["templates/lean_project/*", "templates/lean_project/MathProject/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
